[package]
name = "housekeeper"
version = "0.1.0"
description = "A dotfile manager, not your housekeeper."
repository = "https://github.com/maxdeviant/housekeeper"
keywords = ["dotfiles"]
authors = ["Marshall Bowers <elliott.codes@gmail.com>"]
license = "MIT"
edition = "2018"

[dependencies]
dirs = "2.0"
paw = "1.0"
structopt = { version = "0.2", features = ["paw"] }
